# ComputerGraphicsPrac

./: CMakeLists.txt  README.md
lib/: geometry.h
raytracing/: CmakeLists.txt  a.out  render  render.cpp
raytracing/Lib/: geometry.h
raytracing/Source/: a.out  render.cpp
raytracing/src/: a.out  render.cpp
src/: render.cpp
